# Tetris

./: README.md  Tetris.docx  tetris_modify.mdj
Project_Tetris/Tetris/: CMakeLists.txt  readMe.md
Project_Tetris/Tetris/src/: CMakeLists.txt  main.cpp
Project_Tetris/Tetris/src/Controller/: Controller.cpp  Controller.h
Project_Tetris/Tetris/src/Model/: Bag.cpp  Bag.h  Board.cpp  Board.h  Board.h.CtiAOU  Direction.h  Game.cpp  Game.h  Level.cpp  Level.h  Observable.cpp  Observable.h  Observer.h  Position.cpp  Position.h  RotationClock.h  Shapes.h  State.h  Timer.cpp  Timer.h
Project_Tetris/Tetris/src/Model/Bricks/: Brick.cpp  Brick.h  BrickC.cpp  BrickC.h  BrickCustom.cpp  BrickCustom.h  BrickI.cpp  BrickI.h  BrickJ.cpp  BrickJ.h  BrickL.cpp  BrickL.h  BrickS.cpp  BrickS.h  BrickT.cpp  BrickT.h  BrickZ.cpp  BrickZ.h
Project_Tetris/Tetris/src/View/: View.cpp  View.h
Project_Tetris/Tetris/src/View/ViewGui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_MainWindow.h
Project_Tetris/Tetris/tests/: CMakeLists.txt  TestBag.cpp  TestBoard.cpp  TestBrick.cpp  TestGame.cpp  TestPosition.cpp
Project_Tetris/build-Tetris-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Project_Tetris/build-Tetris-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply/: cache-v2-e11f181d429765de25b2.json  cmakeFiles-v1-d56b5a312d608735d75e.json  codemodel-v2-d9a5af4c25001a900092.json  directory-_deps.catch2-build-Debug-eab375ba4c15ee3309fa.json  directory-_deps.catch2-build.src-Debug-80e65d9f437829a1adb9.json  directory-src-Debug-ae68d86bf75f0724e6b6.json  index-2024-05-08T19-15-06-0854.json  target-Catch2-Debug-355d5478bb603efd7479.json  target-Catch2WithMain-Debug-a2a59a3be0badc26aa3c.json  target-Tetris-Debug-86344eb3ad082ffc908e.json  target-TetrisTests-Debug-44b88f7295887c813dce.json  target-Tetris_autogen-Debug-64c719a8a4acb993384d.json  (+1 more)
Project_Tetris/build-Tetris-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
Project_Tetris/build-Tetris-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
Project_Tetris/build-Tetris-Desktop_x86_darwin_generic_mach_o_64bit-Debug/src/: Tetris  cmake_install.cmake
Project_Tetris/build-Tetris-Desktop_x86_darwin_generic_mach_o_64bit-Debug/src/Tetris_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Project_Tetris/build-Tetris-Desktop_x86_darwin_generic_mach_o_64bit-Debug/src/Tetris_autogen/I3PIJT4TQD/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
Project_Tetris/build-Tetris-Desktop_x86_darwin_generic_mach_o_64bit-Debug/src/Tetris_autogen/include/: ui_MainWindow.h
Project_Tetris/build-Tetris-Desktop_x86_darwin_generic_mach_o_64bit-Debug/tests/: cmake_install.cmake
(+886 files in other folders)
